Add grunt uglify and concant. Too, add less files.

--- a/desarrollo/html/index.html
+++ b/desarrollo/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="icon" href="" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="" />
+    <link rel="stylesheet" type="text/css" href="../../dist/css/style.css" />
     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee+Inline" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower" /> -->
     <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
